@@ -49,6 +49,7 @@
   *    ranges are specified (thanks to Thomas Bleeker)
   *  - Fixed CDC and RNDIS host demos and class drivers - bidirectional endpoints should use two seperate pipes, not one half-duplex pipe
   *  - Fixed Pipe_IsEndpointBound() not taking the endpoint's direction into account
+  *  - Fixed EEPROM and FLASH ISP programming in the AVRISP project
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
